<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_item_list"
        android:icon="@drawable/list_tracks_bottom_navigation"
        android:title="@string/bottom_navigation_list_tracks"/>
    <item
        android:id="@+id/bottom_navigation_item_current_track"
        android:icon="@drawable/current_bottom_navigation"
        android:title="@string/bottom_navigation_current_track"/>
    <item
        android:id="@+id/bottom_navigation_item_favorite"
        android:icon="@drawable/favorite_bottom_navigation"
        android:title="@string/bottom_navigation_favorite_tracks"/>
    <item
        android:id="@+id/bottom_navigation_item_settings"
        android:icon="@drawable/settings_bottom_navigation"
        android:title="@string/bottom_navigation_settings"/>
</menu>